2009-12-03  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32130
        Add a test for sending non-trivial amount of data over WebSocket

        * websocket/tests/echo_wsh.py: Copied from WebKitTools/pywebsocket/example/echo_wsh.py.
        * websocket/tests/simple-stress-expected.txt: Added.
        * websocket/tests/simple-stress.html: Added.

2009-12-03  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Sam Weinig.

        Fix my absolute URL snafu by outputting only the last path component for these URLs, 
        which is all that is relevant.

        * fast/loader/stateobjects/document-destroyed-navigate-back-expected.txt:
        * fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll-expected.txt:
        * fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll.html:
        * fast/loader/stateobjects/document-destroyed-navigate-back.html:
        * fast/loader/stateobjects/pushstate-with-fragment-urls-and-hashchange-expected.txt:
        * fast/loader/stateobjects/pushstate-with-fragment-urls-and-hashchange.html:

2009-12-03  Oliver Hunt  <oliver@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION (r51627): 3 SVG tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=32117

        Improve testing of svglist.

        * svg/dom/svglist-exception-on-out-bounds-error-expected.txt:
        * svg/dom/svglist-exception-on-out-bounds-error.html:

2009-12-03  Enrica Casucci  <enrica@apple.com>

        Reviewed by Adele Peterson.

        Multiple Undos removes the last posted comment and/or the ones before it.
        <rdar://problem/6557066>
        https://bugs.webkit.org/show_bug.cgi?id=32079

        Added test to verify that undo has no effect when an element is
        no longer editable.
        
        * editing/undo/undo-indent-noneditable-expected.txt: Added.