@@ -4,7 +4,7 @@ State popped - [object Object] (type object)
 State popped - [object Object] (type object)
 State popped -  (type object)
 State popped - null (type object)
-State popped - Wed Dec 31 1969 16:00:00 GMT-0800 (PST) (type object)
+State popped - 0 (type object)
 State popped - String (type string)
 State popped - 42 (type number)
 State popped - true (type boolean)
